[package]
name = "oauth-front"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["original-uri"] }
clap = { version = "4", features = ["derive"] }
fantoccini = "0.22"
reqwest = {version ="0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
